--- a/src/components/home/advertisement/Advertisement.less
+++ b/src/components/home/advertisement/Advertisement.less
@@ -1,5 +1,6 @@
 .advertisement {
     position: relative;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 
     .advertisement-logo {
         width: 100%;
