--- a/src/components/home/jobList/JobList.less
+++ b/src/components/home/jobList/JobList.less
@@ -1,7 +1,11 @@
 .opening-list {
     list-style: none;
-    padding: 0;
-    margin-top: 35px;
+    padding-top: 35px;
+
+    .searchMode &{
+      padding-top: 80px;
+    }
+
 
     &.grid {
         .list-item {
@@ -26,4 +30,3 @@
         }
     }
 }
-
