--- a/src/components/jobDetail/jobDetailPage.less
+++ b/src/components/jobDetail/jobDetailPage.less
@@ -16,13 +16,13 @@
             font-family: Oswald;
             font-size: 18px;
             font-weight: 600;
-            color: #464547;            
+            color: #464547;
         }
 
         .description-content {
             font-family: SourceSansPro;
             font-size: 16px;
-            color: #464547;            
+            color: #464547;
         }
 
         .bullet-item {
@@ -54,7 +54,8 @@
                 font-family: Oswald;
                 font-size: 16px;
                 font-weight: 500;
-                color: #a3c644;                
+                color: #a3c644;
+                text-decoration: none;
             }
         }
 
