--- a/src/components/common/forms/forms.less
+++ b/src/components/common/forms/forms.less
@@ -5,7 +5,31 @@
     border: solid 1px #d8d8d8;
     margin-bottom: 8px;
     padding: 11px 0px 11px 12px;
+    -webkit-appearance: none;
 }
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  &:after{
+    content: '*';
+    display: inline-block;
+    color: red;
+  }
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: pink;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: pink;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: pink;
+}
+
+.required::-webkit-input-placeholder:after {
+    content: " *";
+    color: red;
+}
+
 
 .job-form__input[type="file"] {
     width: 48px;
@@ -16,12 +40,13 @@
     border-color: red !important;
 }
 
-.btn {
+.job-form__submit, .job-form__cancel{
     border: none;
     width: 130.4px;
     height: 40px;
     border-radius: 25px;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.5);
+    -webkit-appearance: none;
     color: #fff;
     font-family: SourceSansPro;
     font-size: 16px;
@@ -31,12 +56,10 @@
 
 
 .job-form__submit {
-    .btn;
     background-color: #a2c752;
 }
 
 .job-form__cancel {
-    .btn;
     background-color: #b22746;
     margin-right: 17px;
 }
