--- a/src/components/roles/Roles.less
+++ b/src/components/roles/Roles.less
@@ -1,15 +1,20 @@
 .roles {
-    margin-top: 35px;
     position: relative;
 }
 
 
-.roles__wrapper {
+.roles__list {
     position: absolute;
+    top: 40px;
     padding: 20px 0;
     font-family: 'SourceSansPro';
     z-index: 1050;
     background-color: #fff;
+    box-shadow: -1px 0 4px 0 rgba(179, 179, 179, 0.5), 1px 2px 4px 0 rgba(179, 179, 179, 0.5);
+
+    .searchMode & {
+      top: 80px;
+    }
 }
 
 .roles__item {
